refactor(vacancy): simplificar a coleta de listas e usar o padrão Builder em VacancyResponseDTO